--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-05-02 Joe Hunt
+0003816: Customer Credit Note (stand alone) does not restore inventory 
+M sales/includes/db/sales_credit_db.inc
+
 2017-03-19 Janusz Dobrowolski
 Entropy fix wraps uniqid() in random_id() in main.inc
 M admin/attachments.php
