--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2017-05-12 Joe Hunt
+Added a small Arabic font file and improved the builtin DashBoard.
+M config.default.php
+M includes/dashboard.inc
+M reporting/fonts/zarnormal.ttf
+M reporting/includes/class.graphic.inc
+
 2017-05-11 Joe Hunt
 Customer/Supplier Balances Report | Allocated column not showing correctly. Fixed.
 M reporting/rep101.php
