Optimized Inventory Valuation Reports, 301 and 308. https://github.com/FrontAccountingERP/FA/commit/9d9a80a6a4411f42f06a30284b1e6d02277ad992 http://frontaccounting.com/punbb/viewtopic.php?pid=27824#p27824

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-05-14 Joe Hunt
+Optimized Inventory Valuation Reports, 301 and 308.
+M reporting/rep301.php
+M reporting/rep308.php
+
 2017-05-12 Joe Hunt
 Added a small Arabic font file and improved the builtin DashBoard.
 M config.default.php
