Rerun. 0003864: [Fixed Assets] GL Transactions for Fixed Asset Sales are wrong (patch provided) https://github.com/FrontAccountingERP/FA/commit/203767c14f89edb2740c8ca1dcbba0e55468aa3e

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-05-15 Joe Hunt
+Rerun. 0003864: [Fixed Assets] GL Transactions for Fixed Asset Sales are wrong (patch provided)
+M sales/includes/db/sales_delivery_db.inc
+
+2017-05-15 Joe Hunt
 Improvements to dashboard.
 M includes/dashboard.inc
 
