Deleted doc/CHANGELOG.old.txt. Not needed any more. https://github.com/FrontAccountingERP/FA/commit/6d7c502a1144b84de61e6b5d81b87685a45aca7e

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-05-20 Joe Hunt
+Deleted doc/CHANGELOG.old.txt. Not needed any more.
+D	doc/CHANGELOG.old.txt
+
+2017-05-20 Joe Hunt
 0003761: Reorder email is not sent for items used work order. Fixed.
 M	manufacturing/includes/db/work_order_costing_db.inc
 
