Fixed more rows when reporting to Excel Reports. Greater then 65535 rows. https://github.com/FrontAccountingERP/FA/commit/366a3ecbcd7841413f980f9e1d65895b77af1b82 http://frontaccounting.com/punbb/viewtopic.php?pid=27902#p27902 OLE_Writer replaced with OLE Storage Lite pps http://www.bettina-attack.de/jonny/view.php/projects/php_ole/ https://github.com/pear/OLE/blob/master/OLE/PPS/Root.php

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-06-08 Joe Hunt
+Fixed more rows when reporting to Excel Reports. Greater then 65535 rows.
+M reporting/includes/Workbook.php
+M reporting/includes/excel_report.inc
+
 2017-06-02 12:15:41 +0200 Janusz Dobrowolski 
 Now stable branch is 2.4
 
