--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,7 +1,11 @@
 2017-06-08 Joe Hunt
+Fixed dashboard page in Setup tab. Mixing customers in the Supplier diagram.
+M	includes/dashboard.inc
+
+2017-06-08 Joe Hunt
 Fixed more rows when reporting to Excel Reports. Greater then 65535 rows.
-M reporting/includes/Workbook.php
-M reporting/includes/excel_report.inc
+M	reporting/includes/Workbook.php
+M	reporting/includes/excel_report.inc
 
 2017-06-02 12:15:41 +0200 Janusz Dobrowolski 
 Now stable branch is 2.4
