0003896: Fixed Assets valuation report, location parameter not working https://github.com/FrontAccountingERP/FA/commit/26c3aa914a802dab194638f7750e5b486beedb0f

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-06-15 Janusz Dobrowolski
+0003896: Fixed Assets valuation report, location parameter not working
+M	reporting/rep451.php
+
+2017-06-15 Janusz Dobrowolski
 Fixed payments reallocation for prepayment orders; blocked edition for open prepayment orders.
 M	includes/db/allocations_db.inc
 M	lang/new_language_template/LC_MESSAGES/empty.po
