Fixed document total presentation in customer/supplier transaction inquiries. Rerun also. https://github.com/FrontAccountingERP/FA/commit/27d2650c63d4c853054945938251bfe884faed74#commitcomment-22625945

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
-2017-06-15 Janusz Dobrowolski
+2017-06-19 Janusz Dobrowolski
+Fixed document total presentation in customer/supplier transaction inquiries. Rerun also.
+M	purchasing/inquiry/supplier_inquiry.php
+M	sales/includes/db/cust_trans_db.inc
+M	sales/inquiry/customer_inquiry.php
+
+2017-06-18 Janusz Dobrowolski
 0003896: Fixed Assets valuation report, location parameter not working
 M	reporting/rep451.php
 
