Double escape of slash in translatable js strings. Fixed. https://github.com/FrontAccountingERP/FA/commit/c389dc1204205da3235907b9db3ab4aaf246719b Language .po files corrected for '\\n' => '\n' https://github.com/apmuthu/FA24extensions/commit/ef2df516ca105a7c8b8b08b1bc88a11b91156d96 Double escape of slash in translatable js strings http://frontaccounting.com/punbb/viewtopic.php?id=6842

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-06-19 Joe Hunt
+Double escape of slash in translatable js strings. Fixed.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
 2017-06-19 Janusz Dobrowolski
 Fixed document total presentation in customer/supplier transaction inquiries. Rerun also.
 M	purchasing/inquiry/supplier_inquiry.php
