--- a/core/lang/new_language_template/LC_MESSAGES/empty.po
+++ b/core/lang/new_language_template/LC_MESSAGES/empty.po
@@ -14001,7 +14001,7 @@ msgid ""
 msgstr ""
 
 #: sales/sales_order_entry.php:756 sales/sales_order_entry.php:765
-msgid "You are about to void this Document.\\nDo you want to continue?"
+msgid "You are about to void this Document.\nDo you want to continue?"
 msgstr ""
 
 #: sales/sales_order_entry.php:759
@@ -14010,7 +14010,7 @@ msgstr ""
 
 #: sales/sales_order_entry.php:763
 msgid ""
-"You are about to cancel undelivered part of this order.\\nDo you want to "
+"You are about to cancel undelivered part of this order.\nDo you want to "
 "continue?"
 msgstr ""
 
