Quick Entries. Wrong number of QE rows in presentation. Fixed. https://github.com/FrontAccountingERP/FA/commit/17bc3d2f9c2f78934674e0b98f3d205869bfdbc2 The 'quick_entry_lines' table has the new 'memo' field in FA 2.4.x.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
-2017-06-19 Joe Hunt
+2017-06-28 Joe Hunt
+Quick Entries. Wrong number of QE rows in presentation. Fixed.
+M	gl/manage/gl_quick_entries.php
+
+2017-06-27 Joe Hunt
 Double escape of slash in translatable js strings. Fixed.
 M	lang/new_language_template/LC_MESSAGES/empty.po
 
