0003921: Bug in Tax Groups fixed. https://github.com/FrontAccountingERP/FA/commit/5bdeff963d434637f3ad2e4c82dd00b9780e7fcc

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-06-30 Joe Hunt
+0003921: Bug in Tax Groups fixed.
+M	taxes/tax_groups.php
+
 2017-06-28 Joe Hunt
 Quick Entries. Wrong number of QE rows in presentation. Fixed.
 M	gl/manage/gl_quick_entries.php
