Changing $use_costed_value to 1 instead of 0. Used in Inventory Valuation report. https://github.com/FrontAccountingERP/FA/commit/bc760d6f50218f3627fd470314661adf12b63495 http://frontaccounting.com/punbb/viewtopic.php?pid=28221#p28221 This variable is no longer used in the core and is made available for backwards compatibility with custom / old extensions.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-06-30 Joe Hunt
+Changing $use_costed_value to 1 instead of 0. Used in Inventory Valuation report.
+M	config.default.php
+
+2017-06-30 Joe Hunt
 0003921: Bug in Tax Groups fixed.
 M	taxes/tax_groups.php
 
