Updated language templates. Double escaped Newlines fixed. https://github.com/FrontAccountingERP/FA/commit/73ab8fd6613a3632544a8d84819f0335a15dc219 https://github.com/FrontAccountingERP/FA/commit/c389dc1204205da3235907b9db3ab4aaf246719b

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2017-07-27 Janusz Dobrowolski
+Updated language templates. Double escaped Newlines fixed.
+M	install/lang/new_language_template/LC_MESSAGES/empty.po
+M	install/lang/pl_PL/LC_MESSAGES/pl_PL.mo
+M	install/lang/pl_PL/LC_MESSAGES/pl_PL.po
+M	lang/new_language_template/LC_MESSAGES/empty.po 
+
 2017-07-27 Joe Hunt
 Database connection issue with non standard port.
 M	admin/create_coy.php
