--- a/FA24Mods/install/lang/ta_IN/LC_MESSAGES/ta_IN.po
+++ b/FA24Mods/install/lang/ta_IN/LC_MESSAGES/ta_IN.po
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: FrontAccounting Install Wizard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-27 20:22+0200\n"
 "PO-Revision-Date: 2017-07-29 16:30+0530\n"
