--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,13 +1,17 @@
+2017-07-30 Joe Hunt
+0003962: Fixed result in Inventory Purchasing Report and re-run.
+M	purchasing/includes/db/grn_db.inc
+
 2017-07-27 Janusz Dobrowolski
 Double escaped newlines used in js strings reverted in language file template.
-M	lang/new_language_template/LC_MESSAGES/empty.po 
+M	lang/new_language_template/LC_MESSAGES/empty.po
 
 2017-07-27 Janusz Dobrowolski
 Updated language templates. Double escaped Newlines fixed.
 M	install/lang/new_language_template/LC_MESSAGES/empty.po
 M	install/lang/pl_PL/LC_MESSAGES/pl_PL.mo
 M	install/lang/pl_PL/LC_MESSAGES/pl_PL.po
-M	lang/new_language_template/LC_MESSAGES/empty.po 
+M	lang/new_language_template/LC_MESSAGES/empty.po
 
 2017-07-27 Joe Hunt
 Database connection issue with non standard port.
@@ -17,7 +21,7 @@ M	includes/db/connect_db_mysql.inc
 M	includes/db/connect_db_mysqli.inc
 M	install/index.php
 M	install/lang/new_language_template/LC_MESSAGES/empty.po
-M	lang/new_language_template/LC_MESSAGES/empty.po 
+M	lang/new_language_template/LC_MESSAGES/empty.po
 
 2017-07-26 Joe Hunt
 undefined $myrow['trans_type'] when updating sales order
