0003961: Undefined variables used during journal modify (tax included) https://github.com/FrontAccountingERP/FA/commit/d668de6006af464c34fa2cf864df4a0f398f3fa4#diff-8b05765f75df0f66f892b94581f7dee0

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-07-30 Joe Hunt
+0003961: Undefined variables used during journal modify (tax included)
+M	gl/gl_journal.php
+
+2017-07-30 Joe Hunt
 0003962: Fixed result in Inventory Purchasing Report and re-run.
 M	purchasing/includes/db/grn_db.inc
 
