--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2017-07-30 Joe Hunt
+0003954: Removed wrong RB from Customer Transactions Inquiry.
+M	sales/includes/db/cust_trans_db.inc
+M	sales/inquiry/customer_inquiry.php
+
+2017-07-30 Joe Hunt
 0003961: Undefined variables used during journal modify (tax included)
 M	gl/gl_journal.php
 
