Fixed invalid reference number update in document edition. https://github.com/FrontAccountingERP/FA/commit/95b0f12c88c15a89e6d73f8f02ec2cd042167bed http://frontaccounting.com/punbb/viewtopic.php?pid=28495#p28495

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-08-28 Janusz Dobrowolski
+Fixed invalid reference number update in document edition. 
+M	includes/ui/ui_input.inc
+
 2017-08-04 Janusz Dobrowolski
 [0003964] Fixed bug in voiding GRN.
 M	admin/void_transaction.php
