Fix in date2sql function. https://github.com/FrontAccountingERP/FA/commit/7c0d74930927c837225710f89591cba93d16ac5f http://frontaccounting.com/punbb/viewtopic.php?pid=28494#p28494

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,8 +1,12 @@
+2017-08-29 Joe Hunt
+Fix in date2sql function.
+M	includes/date_functions.inc
+
 2017-08-28 Janusz Dobrowolski
 Fixed invalid reference number update in document edition. 
 M	includes/ui/ui_input.inc
 
-2017-08-04 Janusz Dobrowolski
+2017-08-04 +0200 Janusz Dobrowolski
 [0003964] Fixed bug in voiding GRN.
 M	admin/void_transaction.php
 
