Extended width of F2 Popup Customer Window to 600px https://github.com/FrontAccountingERP/FA/commit/9988555dbed61bdf6a11a19eb6a4ec52dc0d586c http://frontaccounting.com/punbb/viewtopic.php?pid=28500#p28500

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-08-29 Joe Hunt
+Extended width of F2 Popup Customer Window to 600px
+M	includes/ui/ui_controls.inc
+
+2017-08-29 Joe Hunt
 Fix in date2sql function.
 M	includes/date_functions.inc
 
