--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-08-29 Joe Hunt
+Select button visibility in F4 Items Popup. Removed extra parameter in submit_return() usage.
+M	inventory/manage/items.php
+
+2017-08-29 Joe Hunt
 Extended width of F2 Popup Customer Window to 600px
 M	includes/ui/ui_controls.inc
 
