Fixed Logical Bug in Customer Balances Report. https://github.com/FrontAccountingERP/FA/commit/0f166221e63d742558a4c6b382b5d9be274c5ff9 http://frontaccounting.com/punbb/viewtopic.php?id=6949

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-08-29 Joe Hunt
+Fixed Logical Bug in Customer Balances Report.
+M	reporting/rep101.php
+
+2017-08-29 Joe Hunt
 Select button visibility in F4 Items Popup. Removed extra parameter in submit_return() usage.
 M	inventory/manage/items.php
 
