Old Sales Quote Reference Fix https://github.com/FrontAccountingERP/FA/commit/4fb55e726607d40a22272c0c432c3df8b422b447 http://frontaccounting.com/punbb/viewtopic.php?id=6950 http://frontaccounting.com/punbb/misc.php?action=pun_attachment&item=647&preview

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-08-30 Joe Hunt
+Old Sales Quote Reference Fix
+M	sales/includes/cart_class.inc
+M	sales/view/view_sales_order.php
+
 2017-08-29 Joe Hunt
 Fixed Logical Bug in Customer Balances Report.
 M	reporting/rep101.php
