Group Total in Trial Balance on Screen. https://github.com/FrontAccountingERP/FA/commit/8c7f32852c8ac0f8ec2ecb78fe86c3ed71587ba0 http://frontaccounting.com/punbb/viewtopic.php?id=6951

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-08-31 Joe Hunt
+Group Total in Trial Balance on Screen.
+M	gl/inquiry/gl_trial_balance.php
+
 2017-08-30 Joe Hunt
 Old Sales Quote Reference Fix
 M	sales/includes/cart_class.inc
