--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-09-02 Janusz Dobrowolski
+Fixed bug in product average cost calculations.
+M	manufacturing/includes/db/work_order_produce_items_db.inc
+
 2017-08-31 Joe Hunt
 Group Total in Trial Balance on Screen.
 M	gl/inquiry/gl_trial_balance.php
