Global Config Option for Logo on Reports. https://github.com/FrontAccountingERP/FA/commit/41fc5025878df6a2950e4356e4b6883a5efcac1a http://frontaccounting.com/punbb/viewtopic.php?id=6957

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-09-04 Joe Hunt
+Config option for Logo on Reports.
+M	config.default.php
+M	reporting/includes/pdf_report.inc
+
 2017-09-02 Janusz Dobrowolski
 Fixed bug in product average cost calculations.
 M	manufacturing/includes/db/work_order_produce_items_db.inc
