--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2017-09-05 Joe Hunt
+Per company based Report Logo Option
+M	admin/company_preferences.php
+M	config.default.php
+M	reporting/includes/pdf_report.inc
+
 2017-09-04 Joe Hunt
 Config option for Logo on Reports.
 M	config.default.php
