Sales Invoice: fixed tax included amount position. https://github.com/FrontAccountingERP/FA/commit/785e1fd17e52c72fe560b7ef1b3390e0518b8716 https://sourceforge.net/p/frontaccounting/git/ci/785e1fd17e52c72fe560b7ef1b3390e0518b8716/ http://frontaccounting.com/punbb/viewtopic.php?id=6959 There is an option **Put alternative tax inlcude on docs** in Company Setup in FA 2.4. Just set it on and re-login to the application, then you will have the required value on invoice.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-09-07 Janusz Dobrowolski
+Sales Invoice: fixed tax included amount position.
+M	reporting/rep107.php
+
 2017-09-05 Joe Hunt
 Per company based Report Logo Option
 M	admin/company_preferences.php
