--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2017-09-08 Joe Hunt
+Added the new Company Logo on Reports in default charts.
+M	sql/alter2.4.php
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2017-09-07 Janusz Dobrowolski
 Sales Invoice: fixed tax included amount position.
 M	reporting/rep107.php
