Profit and Loss Statement. Compensate for to-date = leap-year in period compare. https://github.com/FrontAccountingERP/FA/commit/e81a3f7e51220709850ed76fcc7124fd0815f32d http://frontaccounting.com/punbb/viewtopic.php?id=6848

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-09-09 Joe Hunt
+Profit and Loss Statement. Compensate for to-date = leap-year in period compare.
+M	reporting/rep707.php
+
 2017-09-08 Joe Hunt
 Added the new Company Logo on Reports in default charts.
 M	sql/alter2.4.php
