--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,11 @@
+2017-09-17 Joe Hunt
+New Company Option for showing both Short Names and Names in Customer/Supplier lists.
+M	admin/company_preferences.php
+M	includes/ui/ui_lists.inc
+M	sql/alter2.4.php
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2017-09-09 Joe Hunt
 Profit and Loss Statement. Compensate for to-date = leap-year in period compare.
 M	reporting/rep707.php
