Bug in rep108 (and 101) when using Journal Entry for making entries in AR account. https://github.com/FrontAccountingERP/FA/commit/1caf04c98ffd40afe72f0c9f435cc8472627c796 http://frontaccounting.com/punbb/viewtopic.php?id=6974 http://frontaccounting.com/punbb/viewtopic.php?pid=28666#p28666

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-09-19 Joe Hunt
+Bug in rep108 (and 101) when using Journal Entry for making entries in AR account.
+M	 includes/ui/items_cart.inc
+
 2017-09-17 Joe Hunt
 New Company Option for showing both Short Names and Names in Customer/Supplier lists.
 M	admin/company_preferences.php
