Fixed bug in reallocation payments during purchase invoice edition. https://github.com/FrontAccountingERP/FA/commit/4d61463530af727a86e5a59e040b06de90ac5ce7 http://frontaccounting.com/punbb/viewtopic.php?id=6972 http://frontaccounting.com/punbb/viewtopic.php?pid=28677#p28677 $net_total bug fix.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-09-20 Janusz Dobrowolski
+Fixed bug in reallocation payments during purchase invoice edition.
+M	purchasing/includes/db/invoice_db.inc
+
 2017-09-20 Joe Hunt
 Right align numbers in customer inquiry.
 M	sales/inquiry/customer_inquiry.php
