Bug presenting ST_JOURNAL in AR/AP Reports fixed. https://github.com/FrontAccountingERP/FA/commit/d8ebbcd57414b1b57f6f422f00516646b21ada53 http://frontaccounting.com/punbb/viewtopic.php?pid=28701#p28701

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-09-22 Joe Hunt
+Bug presenting ST_JOURNAL in AR/AP Reports fixed.
+M	reporting/rep108.php
+M	sales/includes/db/customers_db.inc
+
 2017-09-20 Joe Hunt
 Right align numbers in inquiries and lists.
 M	includes/ui/allocation_cart.inc
