Removed unused variable $show_voided_gl_trans from 2.4 config file. https://github.com/FrontAccountingERP/FA/commit/f425362379fe66e2b0f17b6e4f09d8d9bdf6c5f2 http://frontaccounting.com/punbb/viewtopic.php?id=6994 http://frontaccounting.com/punbb/viewtopic.php?pid=28746#p28746 It was used in FA 2.3.x in only one place in the gl/includes/db/gl_db_trans.inc file's function get_gl_transactions().

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-09-28 Joe Hunt
+Removed unused variable $show_voided_gl_trans from 2.4 config file.
+M	config.default.php
+
+2017-09-28 Joe Hunt
 Better wrapping on comments in documents.
 M	reporting/rep107.php
 M	reporting/rep109.php
