--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-09-28 Joe Hunt
+Cleanup in gl_db_trans.inc consequent to previous commit
+M	gl/includes/db/gl_db_trans.inc
+
+2017-09-28 Joe Hunt
 Removed unused variable $show_voided_gl_trans from 2.4 config file.
 M	config.default.php
 
