--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-09-29 Joe Hunt
+Test for open_ssl in extensions.
+M	 includes/packages.inc
+
 2017-09-28 Joe Hunt
 Cleanup in gl_db_trans.inc consequent to previous commit
 M	gl/includes/db/gl_db_trans.inc
