Fixed user config values unavailable error generated before user login https://github.com/FrontAccountingERP/FA/commit/8d3c6352a53d725389de634469ca2383a4baa867 https://github.com/apmuthu/frontaccounting/commit/749c2bc8184400c55948248007ce0fe289e21d59 http://frontaccounting.com/punbb/viewtopic.php?id=6999

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-01 Joe Hunt
+Fixed user config values unavailable error generated before user login
+M	includes/current_user.inc
+
 2017-09-29 Joe Hunt
 Test for open_ssl in extensions.
 M	 includes/packages.inc
