Optimised get_company_pref() https://github.com/FrontAccountingERP/FA/commit/b4c00f88c87e776a7700879adb15a2b013d48045 http://frontaccounting.com/punbb/viewtopic.php?id=6998

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-02 Joe Hunt
+Optimised get_company_pref()
+M	admin/db/company_db.inc
+
 2017-10-01 Joe Hunt
 Fixed user config values unavailable error generated before user login
 M	includes/current_user.inc
