PaulShipley fixed bug in ui_controls.inc https://github.com/FrontAccountingERP/FA/commit/4acd1f93d4d8b7f86a6ca6560c22b387ec66e82a https://github.com/FrontAccountingERP/FA/commit/3b431d909abc53e4a4d712cbafa39ca556409d0e#diff-0aba6665c22e9f826e7160525631feaaR242 http://frontaccounting.com/punbb/viewtopic.php?id=7002

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-02 PaulShipley
+Fixed Bug in ui_controls.inc
+M	includes/ui/ui_controls.inc
+
 2017-10-02 Joe Hunt
 Optimised get_company_pref()
 M	admin/db/company_db.inc
