--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-03 Joe Hunt
+Fixed After successful Backup, loader.gif still present
+M	admin/backups.php
+
 2017-10-02 PaulShipley
 Fixed Bug in ui_controls.inc
 M	includes/ui/ui_controls.inc
@@ -12,7 +16,7 @@ M	includes/current_user.inc
 
 2017-09-29 Joe Hunt
 Test for open_ssl in extensions.
-M	 includes/packages.inc
+M	includes/packages.inc
 
 2017-09-28 Joe Hunt
 Cleanup in gl_db_trans.inc consequent to previous commit
@@ -64,7 +68,7 @@ M	sales/inquiry/customer_inquiry.php
 
 2017-09-19 Joe Hunt
 Bug in rep108 (and 101) when using Journal Entry for making entries in AR account.
-M	 includes/ui/items_cart.inc
+M	includes/ui/items_cart.inc
 
 2017-09-17 Joe Hunt
 New Company Option for showing both Short Names and Names in Customer/Supplier lists.
