Searching Journal Inquiry by user fixed https://github.com/FrontAccountingERP/FA/commit/e7e47c885e2f92ff4bfd684eb362a88dd226cfdd http://frontaccounting.com/punbb/viewtopic.php?id=7011

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-05 Joe Hunt
+Searching Journal Inquiry by user fixed
+M	gl/inquiry/journal_inquiry.php
+
 2017-10-03 Joe Hunt
 Fixed After successful Backup, loader.gif still present
 M	admin/backups.php
