Fixed bug in exchange rate display helper. https://github.com/FrontAccountingERP/FA/commit/45c2d587dcdef257924f9a4a87f5634a2290033f http://frontaccounting.com/punbb/viewtopic.php?pid=28952#p28952

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-09 Janusz Dobrowolski
+Fixed bug in exchange rate display helper.
+M	includes/ui/ui_view.inc
+
 2017-10-05 Joe Hunt
 Searching Journal Inquiry by user fixed
 M	gl/inquiry/journal_inquiry.php
