Fixed reference number refresh on conflict during concurrent sales documents entry. https://github.com/FrontAccountingERP/FA/commit/e6bdb5d750ba341d3a74bbe15e88abdb99fa2401 http://frontaccounting.com/punbb/viewtopic.php?pid=28966#p28966

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-10 Janusz Dobrowolski
+Fixed reference number refresh on conflict during concurrent sales documents entry.
+M	sales/sales_order_entry.php
+
 2017-10-09 Joe Hunt
 Fixed Undefined variable: site_ip in file.
 M	gl/includes/db/gl_db_rates.inc
