Fixed Bug in unticked checkbox evaluation https://github.com/FrontAccountingERP/FA/commit/9549235b87720c573a2f1e2144d5a1bb55e6e8fc http://frontaccounting.com/punbb/viewtopic.php?id=7021

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-12 Joe Hunt
+Fixed Bug in unticked checkbox evaluation
+M	includes/ui/ui_input.inc
+
 2017-10-10 Janusz Dobrowolski
 Fixed reference number refresh on conflict during concurrent sales documents entry.
 M	sales/sales_order_entry.php
